# non-rectangular-rmdp

./: .gitignore  LICENSE  README.md  algorithm_1.py  brute_force.py  cpi_algorithm.py  cpi_algorithm_explanation.md  create_plot_from_data.py  datamodels.py  db_operations.py  main.py  optimize_using_scipy.py  plot_cpi_performance_comparison.py  pyproject.toml  rank_1_random_matrix.py  solve_problem.py  variables.py
config/plots/: algorithm_comparison.yaml  time_dimension.yaml
src/rl_robust/: cache.py  config.py  data.py  visualization.py
src/rl_robust/algorithms/: base.py  bisection.py  direct.py  eigen_bisection.py  protocol.py  random_kernel.py  random_rank1.py
