[project]
name = "non-rectangular-rmdp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.0",
    "numba>=0.61.2",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "polars>=1.29.0",
    "pydantic>=2.10.6",
    "scipy>=1.15.1",
    "typer[all]>=0.15.1",
]
