[project]
name = "non-rectangular-rmdp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "jax>=0.6.0",
    "jaxtyping>=0.3.2",
    "matplotlib>=3.10.0",
    "numba>=0.61.2",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "polars>=1.29.0",
    "pydantic>=2.10.6",
    "scipy>=1.15.1",
    "typer>=0.15.1",
]
[tool.ruff]
line-length = 110
indent-width = 4
target-version = "py312"
[tool.ruff.lint]
ignore = ["F722"]
